[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-audit"
version = "0.1.0"
description = "A validation framework that makes it hard for a trading backtest to lie to you: pre-registration, session-clustered statistics, Westfall-Young maxT multiplicity, drift attribution, and lookahead detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Savio Viana" }]
keywords = ["backtesting", "quantitative-finance", "multiple-testing",
            "pre-registration", "statistics", "trading"]
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["edge_audit"]
